--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -36,7 +36,7 @@ en:
       updated_not_active: "Sua senha foi alterada com sucesso."
     registrations:
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Bem-vindo! Cadastro realizado com sucesso."
+      signed_up: "Cadastro realizado com sucesso."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
